form contrast issue fix

--- a/sass/form.scss
+++ b/sass/form.scss
@@ -39,6 +39,10 @@
     font-size: 2.2rem;
     min-height: 500px;
 
+    label {
+      color: #0057b7;
+    }
+
     .form_text {
       display: block;       
     }
@@ -64,7 +68,8 @@
     font-size: 22px;
     font-weight: 700;
     margin: 0 auto 20px;
-    color: rgba(31, 90, 169, .7);
+    color: #0057b7;
+    // color: rgba(31, 90, 169, .7);
     // input[type="radio"] {
     //   visibility: hidden;
     //   width: 0;
